[gd_scene load_steps=30 format=2]

[ext_resource path="res://Enemies/Slimey/Slimey Assets/Slimey.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Slimey/Slimey Assets/Slimey Scripts/Slimey.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Slimey/Slimey Assets/Slimey Scripts/Slime_Idle.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Slimey/Slimey Assets/Slimey Scripts/SlimeFSM.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Slimey/Slimey Assets/Slimey Scripts/Slime_Attack.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Slimey/Slimey Assets/Slimey_Attack.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Spotted.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "Attack",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7.60768, 5.21135 )

[node name="Slimey" type="KinematicBody2D"]
script = ExtResource( 2 )
Spotted = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "Idle"
frame = 3
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 1.68291, 11.8722 )
scale = Vector2( 1.33888, 1.33888 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( -0.847153, -0.988382 )
shape = SubResource( 8 )

[node name="SlimeFSM" type="Node2D" parent="."]
script = ExtResource( 4 )
initialState = "Slime_Idle"

[node name="Slime_Idle" type="Node2D" parent="SlimeFSM"]
script = ExtResource( 3 )
speed = 30

[node name="Slime_Attack" type="Node2D" parent="SlimeFSM"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.36153, 10.8405 )
shape = SubResource( 8 )

[node name="Right_bump" type="RayCast2D" parent="."]
position = Vector2( 0.435729, 11.9551 )
rotation = -1.5708
scale = Vector2( 1, 0.24 )
enabled = true

[node name="Left_bump" type="RayCast2D" parent="."]
position = Vector2( 0.595276, 11.7133 )
rotation = 1.5708
scale = Vector2( 1, 0.24 )
enabled = true

[node name="DL_bump" type="RayCast2D" parent="."]
position = Vector2( 0.31498, 11.9693 )
rotation = 0.897877
scale = Vector2( 0.4, 0.28 )
enabled = true

[node name="DR_bump" type="RayCast2D" parent="."]
position = Vector2( 0.447411, 12.0355 )
rotation = -0.897099
scale = Vector2( 0.4, 0.28 )
enabled = true

[node name="LOS" type="RayCast2D" parent="."]
position = Vector2( 0.31498, 11.8905 )
rotation = 1.5708
scale = Vector2( 0.56, 1.4 )
enabled = true

[node name="Spotted" type="Position2D" parent="."]
position = Vector2( 0.198425, -11.4094 )

[node name="hit_time" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]

[connection signal="strike" from="." to="." method="_on_Slimey_strike"]
[connection signal="animation_finished" from="AnimatedSprite" to="SlimeFSM/Slime_Attack" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="hit_time" to="." method="_on_hit_time_timeout"]
[connection signal="timeout" from="Timer" to="SlimeFSM/Slime_Attack" method="_on_Timer_timeout"]
